# aether

./: .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  justfile
include/: board.h  constants.h  engine.h  engine_vals.h  fen_parser.h  hashing.h  move.h  move_gen.h  perft.h  position.h  utils.h
scripts/: uci_e2e.py
src/: aether.h  bitboard.c  board.c  constants.c  engine.c  engine_vals.c  fen_parser.c  hashing.c  move.c  move_gen.c  perft.c  position.c  string_funcs.c  tests.c  uci.c  utils.c
tests/: test_check.c  test_fen_parser.c  test_hash.c  test_main.c  test_move.c  test_move_gen.c  test_position.c  tests.c
